# KvcForensic

./: KvcForensic.json  KvcForensic.slnx  KvcForensic.vcxproj  KvcForensic.vcxproj.filters  README.md  build.ps1
Linux/: CMakeLists.txt  Makefile  README.md  build.sh
Linux/resources/: KvcForensic.json
Linux/src/: main.cpp
Linux/src/analysis/: report_builder.cpp  report_builder.h
Linux/src/cli/: credential_pipeline.cpp  credential_pipeline.h
Linux/src/core/: crypto_backend.cpp  crypto_backend.h  memory_reader.cpp  memory_reader.h  module_index.cpp  module_index.h  signature_scanner.cpp  signature_scanner.h  text_utils.cpp  text_utils.h  virtual_memory.cpp  virtual_memory.h
Linux/src/lsa/: dpapi_walker.cpp  dpapi_walker.h  kerberos_walker.cpp  kerberos_walker.h  logon_session_walker.cpp  logon_session_walker.h  msv_walker.cpp  msv_walker.h  reader_utils.cpp  reader_utils.h  structures.h  template_registry.cpp  template_registry.h  tspkg_walker.cpp  tspkg_walker.h  wdigest_walker.cpp  wdigest_walker.h
Linux/src/minidump/: dbghelp_types.h  minidump_parser.cpp  minidump_parser.h
Linux/src/security/: lsa_secrets_extractor.cpp  lsa_secrets_extractor.h
Linux/tests/: run_dumps.sh
resources/: KvcForensic.aps  KvcForensic.rc  Resource.h
src/: KvcForensicMain.cpp  KvcForensicWindow.cpp  KvcForensicWindow.h  LsaTemplateSelector.cpp  LsaTemplateSelector.h  WindowsBuildInfo.cpp  WindowsBuildInfo.h
src/analysis/: JsonReportBuilder.cpp  JsonReportBuilder.h  ReportRenderer.h  SafeAnalysisReport.cpp  SafeAnalysisReport.h  TextReportBuilder.cpp  TextReportBuilder.h
(+58 files in other folders)
